--- a/style.css
+++ b/style.css
@@ -62,10 +62,11 @@
 		position: relative;
 		display: flex;
 		flex-wrap: wrap;
+		justify-content: center;
 		width:100%;
 		font-size: 15px;
 		background: color: var(--very-light-gray);
-		margin: 4em auto;
+		margin: 5em auto;
 		padding: 0 2em;
 	}
 
